<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >
<LinearLayout

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/appbar"
        >

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:title="@string/app_name"
            app:titleTextColor="@color/white"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:id="@+id/serviceNumber"
            android:layout_margin="20sp"
            android:hint="@string/customer_service_number"
            android:background="@drawable/et_border"
            android:paddingStart="10sp"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:maxLength="10"
            android:inputType="text"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:id="@+id/etCurrentReading"
            android:layout_margin="20sp"
            android:hint="@string/please_enter_current_reading"
            android:background="@drawable/et_border"
            android:paddingStart="10sp"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:inputType="number"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:id="@+id/etPreviousReading"
            android:layout_margin="20sp"
            android:hint="@string/please_enter_previous_reading"
            android:background="@drawable/et_border"
            android:paddingStart="10sp"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:inputType="number"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bt_submit"
            android:text="@string/calculate"
            android:layout_marginTop="8dp"
            android:layout_gravity="center_horizontal"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/finalReport"
            android:layout_margin="10sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="20sp"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bt_save"
            android:text="@string/save"
            android:layout_marginTop="8dp"
            android:layout_gravity="center_horizontal"
            />

    </LinearLayout>

</LinearLayout>
</layout>